# sudoku

./: .gitignore  BUILD  LICENSE  README  TODO  WORKSPACE  deps.bzl  go.mod
cmd/solver/: BUILD.bazel  main.go
pkg/interstrats/: BUILD.bazel  boxline.go  pointing.go
pkg/nhstrats/: BUILD.bazel  hidden.go  hidden_singles.go  ktuple_handler.go  naked.go
pkg/solver/: BUILD.bazel  core.go  util.go
test/: BUILD.bazel  interstrat_test.go  nhstrat_test.go  solver_test.go
util/: BUILD.bazel  test_util.go
