load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "solver_lib",
    srcs = ["main.go"],
    importpath = "github.com/deroshkin/sudoku/cmd/solver",
    visibility = ["//visibility:private"],
    deps = ["//pkg/solver"],
)

go_binary(
    name = "solver",
    embed = [":solver_lib"],
    visibility = ["//visibility:public"],
)
