load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interstrats",
    srcs = ["pointing.go"],
    importpath = "github.com/deroshkin/sudoku/pkg/interstrats",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/solver",
        "@org_golang_x_exp//slices",
    ],
)
